[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["llm_library"]


[project]
name = "llm_library"
version = "0.2.0"
description = "A mock library for LLM clients"
authors = ["Alessio Salati"]
license = "MIT"